# ai-writing-bad-cases-app

./: .gitignore  .gitmodules  PLAN.md  README.md  SIGNALS.md  USAGE.md  pyproject.toml
.claude/skills/aigc-detector/: SKILL.md
.claude/skills/web-search/: SKILL.md  web_search.py
good-cases/: POSITIVE_STYLE_ANCHORS.md  中国建筑的特征.md  物候学.md  花儿为什么这样红.md  谈中国诗.md
scripts/: demo_perplexity.py
src/ai_badcase_app/: __init__.py  analyzer.py  cli.py  library.py  matcher.py  models.py  perplexity.py  rewrite.py  seekdb_index.py  statistics.py  text_utils.py
tests/: test_analyzer.py  test_author_fit_regression.py  test_cli.py  test_evaluation.py  test_library.py  test_matcher.py  test_perplexity.py  test_rewrite.py  test_scoring.py  test_seekdb_index.py
tests/fixtures/: zh_ai_paragraphs.json  zh_human_paragraphs.json
