[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-badcase-app"
version = "0.1.0"
description = "Local detector for AI writing bad cases"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
seekdb = ["pyseekdb"]

[project.scripts]
ai-badcase-detect = "ai_badcase_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
