[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-badcase-app"
version = "0.1.0"
description = "Local detector for AI writing bad cases"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "numpy>=2.4.3",
    "pyseekdb>=1.1.0.post3",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
perplexity = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
ai-badcase-detect = "ai_badcase_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
